# jinja.rs

./: Cargo.toml  INSTALL.md  LICENSE.md  README.md  build.rs  build_freebsd.rs  build_linux.rs  build_macos.rs  deny.toml  fun.j2  j2.yaml  justfile
.github/workflows/: autofix.yaml  changelog.yaml  cross-build.yaml  dependency-review.yml  health.yaml  issues.yaml  licenses.yaml  lint.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml
crates/errors-cli/: Cargo.toml
crates/errors-cli/src/: main.rs
crates/errors-lib/: Cargo.toml  TODO.md  build.rs
crates/errors-lib/src/: lib.rs  types.rs
crates/errors-lib/tests/: api_error.rs
crates/errors-lib/tests/snapshots/: api_error__snapshot_api_error.snap
docs/tests/: README.md
logs/: api-errors.log.2026-02-02
packaging/nfpm/: nfpm.yaml
scripts/: Taskfile.dist.yaml  Taskfile.local.yaml  dist.just
src/: lib.rs  main.rs  tests.rs
src/common/: mod.rs
tests/: build_tests.rs  unit_build_script.rs
