[package]
name = "jinja-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
#chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
#dirs = "6.0"
#glob = "0.3"
minijinja = "2.14"
rhai = { version = "1.24", features = ["serde", "std", "sync"] }
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
serde_yaml = "0.9"
#walkdir = "2.5"

[dev-dependencies]
color-eyre = "0.6.5"
pretty_assertions = "1.4.1"
tempfile = "3.24"
