[package]
name = "jinja-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
#chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
#dirs = "6.0"
#glob = "0.3"
minijinja = "2.14"
rhai = { version = "1.24", features = ["serde", "std", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.24"
#walkdir = "2.5"

# FreeBSD specific build dependencies
[target.'cfg(target_os = "freebsd")'.build-dependencies]
zstd = "0.13"
flate2 = "1.1"
tar = "0.4"
yaml-rust = "0.4"

[target.'cfg(not(target_os = "freebsd"))'.build-dependencies]
release-dep = "0.1"
flate2 = "1.1"
tar = "0.4"

[dev-dependencies]
color-eyre = "0.6"
pretty_assertions = "1.4"
tempfile = "3.24"

[build-dependencies]
chrono = "0.4"
ureq = { version = "3.1", default-features = false, features = ["rustls"] }
