[package]
name = "jinja-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
minijinja = "2.14"
rhai = { version = "1.24", features = ["serde", "std", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
tempfile = "3.24"

[dev-dependencies]
color-eyre = "0.6"
pretty_assertions = "1.4"
tempfile = "3.24"

# -------------------------------
# FreeBSD build dependencies
# -------------------------------
[target.'cfg(target_os = "freebsd")'.build-dependencies]
zstd = "0.13"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
ureq = { version = "3.1", default-features = false, features = ["rustls", "json", "charset"] }

# -------------------------------
# Linux / macOS build dependencies
# -------------------------------
[target.'cfg(not(target_os = "freebsd"))'.build-dependencies]
tar = "0.4"
xz2 = "0.1.7"
serde_json = "1.0"

# -------------------------------
# Shared build dependencies
# -------------------------------
[build-dependencies]
chrono = "0.4"
ureq = { version = "3.1", default-features = false, features = ["rustls", "json", "charset"] }
